Overflow fix

--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   text-align: center;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   background-image: url('./assets/background.svg');
   background-repeat: no-repeat;
   background-size: cover;
